Rollback to 0.1.4-SNAPSHOT config